--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -3,12 +3,12 @@
 name: Docker Actions
 
 # Controls when the workflow will run
-on:
+on: [push, workflow_dispatch]
   # Triggers the workflow on push or pull request events but only for the main branch
-  [push]
+
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
