--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -3,7 +3,7 @@
 name: Docker Actions
 
 # Controls when the workflow will run
-on: [push, workflow_dispatch]
+on: [push]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -14,5 +14,6 @@ jobs:
       
       - name: hello-action
         uses: ./.github/actions/hello-world
-      
+        with:
+          firstGreeting: "Learning Lab User"
 
