--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,19 +1,22 @@
 # This is a basic workflow to help you get started with Actions
 
-# name: Docker Actions
+name: Docker Actions
 
 # Controls when the workflow will run
-# on: [push]
+on:
+  pull_request:
+    types: [labeled]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
-# jobs:
-#   action:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v1
+jobs:
+   action:
+     runs-on: ubuntu-latest
+     steps:
+       - uses: actions/checkout@v1
       
-#       - name: hello-action
-#         uses: ./.github/actions/hello-world
-#         with:
-#           thirdGreeting: "Learning Lab User"
+       - name: hello-action
+         uses: ./.github/actions/hello-world
+   
+       - name: meow
+       - uses: ./.github/actions/cat-facts
 
