--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -1,22 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Docker Actions
 
-# Controls when the workflow will run
 on:
   pull_request:
     types: [labeled]
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   action:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
 
       - name: hello-action
-      - uses: ./.github/actions/hello-world
-   
-      - name: meow
-      - uses: ./.github/actions/cat-facts
+        uses: ./.github/actions/hello-world
 
+      - name: meow
+        uses: ./.github/actions/cat-facts
